--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,18 @@
-<ul>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-</ul>
+<html>
+
+<body>
+
+  <module-one>
+    <ul>
+	<li>item 1</li>
+	<li>item 4</li>
+	<li>item 5</li>
+    </ul>
+  </module-one>
+
+  <module-two>
+    <div>my awesome new module about news</div>
+  </module-two>
+</body>
+
+</html>
